kubernetes/production/service-prod.yaml
#kubernetes/production/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: apolo-auto-service-prod
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: nginx
